[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui/button/next_dialog.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/button/next_scene.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/background/blank.png" type="Texture" id=3]
[ext_resource path="res://assets/dialog/bmonofont-i18n.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/dialog/dialog_usmin.png" type="Texture" id=5]
[ext_resource path="res://story_telling/dialog1.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/background/agreee.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 20 )

[node name="dialog" type="Node2D"]
script = ExtResource( 6 )

[node name="background" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="orang" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="Label" type="Label" parent="."]
margin_left = 290.0
margin_top = 471.0
margin_right = 1159.0
margin_bottom = 657.0
custom_fonts/font = SubResource( 1 )
text = "
oh tidak aku terlanjur ngomong kasar tadi bagaiamana sekarang"
align = 1
autowrap = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 1041, 518 )
normal = ExtResource( 1 )
pressed = ExtResource( 2 )

[node name="background2" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false

[node name="ok" type="TouchScreenButton" parent="background2"]
position = Vector2( 281.5, 196.5 )
shape = SubResource( 2 )

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="background2/ok" to="." method="_on_ok_pressed"]
